<resources>
    <string name="app_name">Practica Magic</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ajustes_admin">Ajustes</string>
    <string name="ajustes">Ajustes</string>
    <string name="about_me">About me</string>
    <string name="open">Menu</string>
    <string name="sobre_mi">Sobre mi</string>
    <string name="volver">Volver</string>
    <string name="eventos">Eventos</string>
    <string name="Cartas">Cartas</string>
    <string name="ventas">Ventas</string>
    <string name="title_tienda">Tienda</string>
    <string name="title_eventos">Eventos</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="ajustes_ajustes">Ajustes</string>
    <string name="ajustes_ventas">Ventas</string>
    <string name="Inscripciones">Inscripciones</string>
</resources>