<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.practicamagic.uiAdmin.home.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="com.example.practicamagic.uiAdmin.pedidos.PedidosAdminFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedidos_admin" />

    <fragment
        android:id="@+id/navigation_eventos"
        android:name="com.example.practicamagic.uiAdmin.eventos.EventosFragment"
        android:label="@string/title_eventos"
        tools:layout="@layout/fragment_eventos_admin" />
    <fragment
        android:id="@+id/navigation_ventas"
        android:name="com.example.practicamagic.uiAdmin.ventas.VentasAdminFragment"
        android:label="@string/ajustes_ventas"
        tools:layout="@layout/fragment_ventas_admin" />

</navigation>