<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_cliente"
    app:startDestination="@+id/navigation_home_cliente">
    <fragment
        android:id="@+id/navigation_home_cliente"
        android:name="com.example.practicamagic.uiClientes.homeCliente.HomeClienteFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_eventos_cliente"
        android:name="com.example.practicamagic.uiClientes.eventosCliente.EventosClienteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_eventos_cliente"/>

    <fragment
        android:id="@+id/navigation_pedidos_cliente"
        android:name="com.example.practicamagic.uiClientes.pedidosCliente.PedidosClienteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_pedidos_cliente"/>
    <fragment
        android:id="@+id/navigation_ajustes_cliente"
        android:name="com.example.practicamagic.uiClientes.ajustesCliente.AjustedClienteFragment"
        android:label="@string/ajustes_admin"
        tools:layout="@layout/fragment_ajusted_cliente"/>
</navigation>